tests/snapshots/snapshot__ai_default_task.snap
---
source: tests/snapshot.rs
expression: "prompts::DEFAULT_TASK"
---
Below is a scrubbed otsniff report. Produce a prioritized investigation list following the rules in the system prompt.
