tests/snapshots/snapshot__dnp3_engineering_finding.snap
---
source: tests/snapshot.rs
assertion_line: 845
expression: findings
---
[
  {
    "id": "ics.dnp3_engineering",
    "severity": "High",
    "title": "DNP3 engineering-class commands on the wire",
    "summary": "3 DNP3 engineering-class command(s) observed across 2 master→outstation pair(s). DNP3 has no native authentication; any host that can reach an outstation on tcp/20000 can send these commands.",
    "evidence": [
      "10.10.0.5 -> 10.10.0.21 : fc=4, fc=5",
      "10.10.0.5 -> 10.10.0.22 : fc=13"
    ],
    "recommendation": "Enable DNP3 Secure Authentication (SA v5) on outstations that support it and ACL tcp/20000 to authorized masters only.",
    "playbook": [
      "Identify the source host(s) physically: `10.10.0.5`. DNP3 masters are typically SCADA front-end processors or engineering workstations. Use the MAC-to-switch-port table (`show mac address-table address <mac>`) to locate the physical port.",
      "Confirm with the on-shift control engineer whether `10.10.0.5` is the authorized DNP3 master for `10.10.0.21` and `10.10.0.22`. Authorized masters are listed in the site's ICS asset register. If yes, the finding is expected but verify there are no other hosts with access.",
      "DNP3 Secure Authentication (SA v5 / IEEE 1815-2012 Annex A) should be enabled on all outstations that support it. Without SA, any reachable host can send engineering commands.",
      "If the source is not an authorized master, ACL the switch so only the authorized master can reach tcp/20000 on `10.10.0.21` and `10.10.0.22`. Coordinate with operations before applying — an unexpected ACL on a DNP3 path is an availability event."
    ]
  }
]
